Initial backend work on jwt auth